...
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/background1" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        android:background="@drawable/buttonlayoutclassicblue"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
 />

    <EditText
        android:id="@+id/txtInput"

        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="16dp"
...
